# sunscreen

./: .editorconfig  .gitignore  .metadata  Cargo.toml  LICENSE  Makefile.toml  README.md  analysis_options.yaml  cbindgen.toml  pubspec.yaml  rustfmt.toml
.github/workflows/: android.yml  ci.yml  ios.yml  lints.yml
android/app/: build.gradle
app/: pubspec.yaml
app/assets/: terms_of_use.txt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: keys.dart  localization.dart  main.dart  styles.dart
app/lib/blocs/: blocs.dart
app/lib/screens/: screens.dart
app/lib/widgets/: layout.dart  logo.dart  widgets.dart
assets/: chainspec.json
ios/Flutter/: .last_build_id
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
keystore/keystore/: Cargo.toml
keystore/keystore-dart/: pubspec.yaml
keystore/keystore-dart/lib/: generate_ffi.dart  generated.dart  keystore.dart  keystore_test.dart
keystore/keystore-ffi/: Cargo.toml  bindings.h  build.rs
keystore/keystore-ffi/src/: lib.rs
lib/: app.dart  constants.dart  main.dart  setup.dart  setup.iconfig.dart  styles.dart  sunshine.dart
lib/blocs/account/: account_bloc.dart  account_state.dart
lib/blocs/navigation/: navigation_bloc.dart
lib/core/: base_model.dart  base_widget.dart  core.dart  register_module.dart
lib/core/extensions/: extensions.dart  router.dart
lib/core/widgets/: button.dart  input.dart  widgets.dart
lib/models/: account_model.dart  bounty_model.dart  bounty_submission_model.dart  device_model.dart  github_issue_model.dart  models.dart
lib/models/identity/: github.dart  service.dart
lib/router/: router.dart  router.gr.dart
lib/router/guards/: guards.dart  has_account_guard.dart
lib/screens/: account_screen.dart  blank_screen.dart  bounty_screen.dart  create_bounty_screen.dart  devices_screen.dart  generate_account_screen.dart  identities_screen.dart  intro_screen.dart  logs_screen.dart  main_screen.dart  paper_key_screen.dart  recover_account_screen.dart  screens.dart  splash_screen.dart  submit_for_bounty_screen.dart  wallet_transfer_screen.dart
lib/screens/account_details/: account_details.dart  account_details_page.dart
lib/screens/account_image/: account_image.dart  account_image_page.dart
lib/screens/account_pharse_confirmation/: account_pharse_confirmation_screen.dart  account_pharse_confirmation_view_model.dart
lib/screens/account_phrase/: account_pharse_screen.dart
lib/screens/create_password/: create_password_page.dart
lib/screens/generate_account/: generate_account_screen.dart  generate_account_view_model.dart
lib/screens/home/: home_screen.dart  home_view_model.dart
lib/screens/main/: main_screen.dart
lib/screens/recover_account/: recover_account_screen.dart  recover_account_view_model.dart
lib/screens/secret_backup/: secret_backup.dart  secret_backup_page.dart
lib/screens/secret_confirm/: secret_confirm.dart
lib/screens/terms_of_use/: terms_of_use_page.dart
lib/services/: account_details_service.dart  account_service.dart  bounty_service.dart  device_service.dart  github_service.dart  identity_service.dart  key_service.dart  keystore_service.dart  logger_service.dart  path_provider_service.dart  services.dart  wallet_service.dart
lib/ui/: account_details_form.dart  account_details_sheet.dart  bounty_item.dart  button.dart  header_text.dart  hint_text.dart  input.dart  list_cell.dart  my_app_bar.dart  submission_item.dart  sunshine_loading.dart  sunshine_logo.dart  ui.dart
lib/utils/: github_issue_regex.dart  random_issue.dart  utils.dart
lib/widgets/: button.dart  input.dart  scrollable_text.dart  widgets.dart
native/keystore-ffi/: Cargo.toml  binding.h  build.rs
native/keystore-ffi/src/: lib.rs
native/sunshine/: Cargo.toml  binding.h
native/sunshine/src/: lib.rs
test_driver/: app.dart  app_test.dart
(+50 files in other folders)
