[package]
name = "keystore"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
blockies = "0.3.0"
dirs = "2.0.2"
failure = "0.1.6"
image = { version = "0.22.4", default-features = false, features = ["png_codec"] }
log = "0.4.8"
pixelate = "0.1.0"
qrcode = "0.11.2"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
sp-core = { git = "https://github.com/paritytech/substrate" }
strobe-rs = "0.5.2"
tiny-bip39 = "0.7.0"

[dev-dependencies]
tempdir = "0.3.7"
