[package]
name = "sunshine"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail>"]
edition = "2018"

[lib]
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib`
crate-type = ["rlib"]

[dependencies]
bounty-ffi = { git = "https://github.com/sunshine-protocol/sunshine-bounty", package = "sunshine-bounty-ffi" }
bounty-client = { git = "https://github.com/sunshine-protocol/sunshine-bounty", package = "test-client" }
frusty-logger = { git =  "https://github.com/sunshine-protocol/frusty-logger" }
log = "^0.4"

[features]
default = ["faucet"]
faucet = []